ultraytics_v11n_and_v11n_akconv/nohup.out
Traceback (most recent call last):
  File "/workspace/boxuan_xing/anaconda_data/envs/boxuan/bin/yolo", line 6, in <module>
    sys.exit(entrypoint())
             ^^^^^^^^^^^^
  File "/workspace/boxuan_xing/ultralytics/ultralytics/cfg/__init__.py", line 914, in entrypoint
    check_dict_alignment(full_args_dict, {a: ""})
  File "/workspace/boxuan_xing/ultralytics/ultralytics/cfg/__init__.py", line 513, in check_dict_alignment
    raise SyntaxError(string + CLI_HELP_MSG) from e
SyntaxError: '[31m[1mtrain_log_v3.txt[0m' is not a valid YOLO argument. 

    Arguments received: ['yolo', 'train', 'model=/workspace/boxuan_xing/ultralytics/ultralytics/cfg/models/11/yolo11n-akconv.yaml', 'data=/workspace/boxuan_xing/ultralytics/coco2017.yaml', 'epochs=100', 'imgsz=640', 'workers=0', 'batch=32', 'cache=ram', 'device=1', 'train_log_v3.txt']. Ultralytics 'yolo' commands use the following syntax:

        yolo TASK MODE ARGS

        Where   TASK (optional) is one of ['classify', 'detect', 'segment', 'obb', 'pose']
                MODE (required) is one of ['predict', 'train', 'track', 'benchmark', 'export', 'val']
                ARGS (optional) are any number of custom 'arg=value' pairs like 'imgsz=320' that override defaults.
                    See all ARGS at https://docs.ultralytics.com/usage/cfg or with 'yolo cfg'

    1. Train a detection model for 10 epochs with an initial learning_rate of 0.01
        yolo train data=coco8.yaml model=yolo26n.pt epochs=10 lr0=0.01

    2. Predict a YouTube video using a pretrained segmentation model at image size 320:
        yolo predict model=yolo26n-seg.pt source='https://youtu.be/LNwODJXcvt4' imgsz=320

    3. Validate a pretrained detection model at batch-size 1 and image size 640:
        yolo val model=yolo26n.pt data=coco8.yaml batch=1 imgsz=640

    4. Export a YOLO26n classification model to ONNX format at image size 224 by 128 (no TASK required)
        yolo export model=yolo26n-cls.pt format=onnx imgsz=224,128

    5. Ultralytics solutions usage
        yolo solutions count or any of ['crop', 'blur', 'workout', 'heatmap', 'isegment', 'visioneye', 'speed', 'queue', 'analytics', 'inference', 'trackzone'] source="path/to/video.mp4"

    6. Run special commands:
        yolo help
        yolo checks
        yolo version
        yolo settings
        yolo copy-cfg
        yolo cfg
        yolo solutions help

    Docs: https://docs.ultralytics.com
    Solutions: https://docs.ultralytics.com/solutions/
    Community: https://community.ultralytics.com
    GitHub: https://github.com/ultralytics/ultralytics
    
